--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+GOOGLE_MAPS_API_KEY = AIzaSyAAWJ_4DQE74yQEJ6TRLZR0v8MzZZRKWOQ
