--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:multidex:1.0.1'
     implementation 'com.google.ar:core:1.12.0'
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.12.0'
     implementation 'com.google.ar.sceneform:core:1.12.0'
@@ -41,6 +42,7 @@ dependencies {
     implementation (name: 'wikitudesdk', ext:'aar')
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation "com.google.android.gms:play-services-location:15.0.1"
     testImplementation 'junit:junit:4.12'
@@ -48,6 +50,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.0.0'
 }
+
 
 repositories {
     flatDir{
